# FAE_Toolkit_Bong

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  README.md
cpp/include/fae/: crc.hpp  modbus.hpp
cpp/python/: bindings.cpp  check_bindings.py
cpp/src/: crc.cpp  main.cpp  modbus.cpp
cpp/tests/: test_crc.cpp
docs/: DEVELOPMENT.en.md  DEVELOPMENT.md  HARDWARE.en.md  HARDWARE.md  PORTFOLIO.en.md  PORTFOLIO.md  USAGE.en.md  USAGE.md  build_portfolio_pdf.py  capture_gif.py  capture_screenshot.py
packaging/: cli_entry.py  gui_entry.py  teaching_entry.py
ros2_bridge/: README.md  package.xml  setup.cfg  setup.py
ros2_bridge/fae_ros2_bridge/: bms_publisher.py  io_publisher.py
src/fae_toolkit/: __init__.py  bridge.py  cli.py
src/fae_toolkit/core/: __init__.py  crc.py  hexfmt.py  macros.py  net.py  transport.py
src/fae_toolkit/protocols/: __init__.py  modbus.py
src/fae_toolkit/protocols/bms/: __init__.py  client.py  model.py  registers.py
src/fae_toolkit/protocols/canbus/: __init__.py  client.py  frames.py  model.py
src/fae_toolkit/protocols/io/: __init__.py  client.py  map.py  model.py
src/fae_toolkit/services/: __init__.py  csv_logger.py
src/fae_toolkit/sim/: __init__.py  base.py  bms.py  can_bms.py  io.py
src/fae_toolkit/teaching/: __init__.py  model.py  store.py
src/fae_toolkit/teaching_manager/: __init__.py  app.py  main_window.py  view.py
src/fae_toolkit/ui/: __init__.py  app.py  battery_view.py  can_view.py  i18n.py  io_view.py  main_window.py  teaching_view.py  worker.py
src/fae_toolkit/ui/comm/: __init__.py  bytestream_tab.py  can_tab.py  macros_panel.py  monitor.py  panels.py  reader.py  sender.py
tests/: test_bms_sim.py  test_bridge.py  test_can.py  test_cli.py  test_crc.py  test_csv_logger.py  test_gui_smoke.py  test_hexfmt.py  test_io_sim.py  test_macros.py  test_modbus.py  test_native.py  test_net.py  test_serial_socat.py  test_teaching.py
